# UnDF-Bases3-Estatistica-202602

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  _quarto.yml  compose.yaml  formato.py  index.html  index.qmd  modo-leitura.html  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml  spoiler.html  styles.css
.devcontainer/: devcontainer.json
.github/workflows/: quarto-render.yml
content/cap01/: 01-dados-estruturados.html  01-dados-estruturados.qmd  02-dados-retangulares.html  02-dados-retangulares.qmd  03-estimativas-localizacao.html  03-estimativas-localizacao.qmd  04-estimativas-variabilidade.html  04-estimativas-variabilidade.qmd  05-distribuicao-dados.html  05-distribuicao-dados.qmd  06-dados-binarios-categoricos.html  06-dados-binarios-categoricos.qmd  07-correlacao.html  07-correlacao.qmd  08-duas-ou-mais-variaveis.html  08-duas-ou-mais-variaveis.qmd  index.html  index.qmd
content/cap02/: 01-amostragem-aleatoria.html  01-amostragem-aleatoria.qmd  02-vies-selecao.html  02-vies-selecao.qmd  03-distribuicao-amostral.html  03-distribuicao-amostral.qmd  04-bootstrap.html  04-bootstrap.qmd  05-intervalos-confianca.html  05-intervalos-confianca.qmd  06-distribuicao-normal.html  06-distribuicao-normal.qmd  07-caudas-longas.html  07-caudas-longas.qmd  08-distribuicao-t.html  08-distribuicao-t.qmd  09-distribuicao-binomial.html  09-distribuicao-binomial.qmd  10-qui-quadrado.html  10-qui-quadrado.qmd  11-distribuicao-f.html  11-distribuicao-f.qmd  12-poisson.html  (+3 more)
dados/: README.md  estados.csv
scripts/: gerar-dados-brasil.py  gerar-stubs.sh  verifica-widgets.py
(+61 files in other folders)
